# local-search-heuristic

./: pyproject.toml  vercel.json
optimal/: __main__.py  main.py
optimal/optimizer/: optimizer.py
optimal/utils/: __init__.py  data.py  investiment.py
tests/: conftest.py
tests/optimizer/: test_optimizer_class.py
tests/utils/: test_data_manipulation.py
